crates/oxc_css_parser/tests/error/scss/at-rule/include/unterminated.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: component value is expected
  ┌─ unterminated.scss:2:41
  │
2 │   @include incorrectly-terminated($a,$b,;
  │                                         ^


